feat(autenticação): implementar cadastro e login de usuário

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace = never
-api.security.token.secret =${JWT_SECRET}
+api.security.token.secret =${JWR_SECRET}
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
