<feat> (Docker compose) <migração do banco de dados local para um container docker usando o arquivo docker compose>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=validate
+# Banco de Dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador_orcamento
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+# Hibernate / JPA
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-server.error.include-stacktrace = never
-api.security.token.secret =${JWR_SECRET}
+
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+# Segurança
+api.security.token.secret=${JWR_SECRET}
+
+# Outros
+server.error.include-stacktrace=never
